@@ -116,12 +116,15 @@ namespace pb_ds
     multimap_insert_test<It, Native>::
     insert(Cntnr, It ins_it_b, It ins_it_e, pb_ds::detail::true_type)
     {
+      typedef __gnu_test::tracker_allocator_counter counter_type;
       __gnu_test::tracker_allocator<char> alloc;
-      const size_t init_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+      const size_t init_mem = counter_type::get_allocation_count() 
+	                      - counter_type::get_deallocation_count();
       Cntnr cntnr;
       for (It ins_it = ins_it_b; ins_it != ins_it_e; ++ins_it)
         cntnr.insert((typename Cntnr::const_reference)(*ins_it));
-      const size_t final_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+      const size_t final_mem = counter_type::get_allocation_count() 
+	                       - counter_type::get_deallocation_count();
       assert(final_mem > init_mem);
       return (final_mem - init_mem);
     }
@@ -132,12 +135,15 @@ namespace pb_ds
     multimap_insert_test<It, Native>::
     insert(Cntnr, It ins_it_b, It ins_it_e, pb_ds::detail::false_type)
     {
+      typedef __gnu_test::tracker_allocator_counter counter_type;
       __gnu_test::tracker_allocator<char> alloc;
-      const size_t init_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+      const size_t init_mem = counter_type::get_allocation_count() 
+	                      - counter_type::get_deallocation_count();
       Cntnr cntnr;
       for (It ins_it = ins_it_b; ins_it != ins_it_e; ++ins_it)
         cntnr[ins_it->first].insert(ins_it->second);
-      const size_t final_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+      const size_t final_mem =  counter_type::get_allocation_count() 
+	                        - counter_type::get_deallocation_count();
       assert(final_mem > init_mem);
       return (final_mem - init_mem);
     }
