@@ -95,9 +95,11 @@ namespace pb_ds
 	  It ins_it_e = m_ins_b;
 	  std::advance(ins_it_e, ins_size);
 
+	  typedef __gnu_test::tracker_allocator_counter counter_type;
 	  __gnu_test::tracker_allocator<char> alloc;
 
-	  const size_t init_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+	  const size_t init_mem = counter_type::get_allocation_count() 
+	                          - counter_type::get_deallocation_count();
 	  Cntnr cntnr;
 	  for (It ins_it =    ins_it_b; ins_it != ins_it_e; ++ins_it)
             cntnr.push(ins_it->first);
@@ -105,7 +107,8 @@ namespace pb_ds
 	  while (cntnr.size() > 1)
             cntnr.pop();
 
-	  const size_t final_mem = alloc.get_allocation_count() - alloc.get_deallocation_count();
+	  const size_t final_mem = counter_type::get_allocation_count() 
+	                           - counter_type::get_deallocation_count();
 	  assert(final_mem > init_mem);
 	  const size_t delta_mem = final_mem - init_mem;
 	  res_set_fmt.add_res(ins_size, static_cast<double>(delta_mem));
@@ -114,5 +117,5 @@ namespace pb_ds
   } // namespace test
 } // namespace pb_ds
 
-#endif // #ifndef PB_DS_POP_TEST_HPP
+#endif 
 
